--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -33,6 +33,8 @@
       nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam ipsum magnam
       optio.
     </p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07" />
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07"
+    /></a>
   </body>
 </html>
