--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -36,5 +36,6 @@
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
       <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07"
     /></a>
+    <a href="tweets.html">Tweets</a>
   </body>
 </html>
