--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,36 +6,54 @@
     <title>Title</title>
   </head>
   <body>
-    <h1>Lorem, ipsum dolor.</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aut
-      dolor ut libero distinctio similique consequuntur molestiae atque, facilis
-      nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam ipsum magnam
-      optio.
-    </p>
-    <h2>Lorem ipsum dolor sit amet.</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aut
-      dolor ut libero distinctio similique consequuntur molestiae atque, facilis
-      nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam ipsum magnam
-      optio.
-    </p>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aut
-      dolor ut libero distinctio similique consequuntur molestiae atque, facilis
-      nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam ipsum magnam
-      optio.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aut
-      dolor ut libero distinctio similique consequuntur molestiae atque, facilis
-      nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam ipsum magnam
-      optio.
-    </p>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
-      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07"
-    /></a>
-    <a href="tweets.html">Tweets</a>
+    <header>
+      <ul>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <h1>Lorem, ipsum dolor.</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          aut dolor ut libero distinctio similique consequuntur molestiae atque,
+          facilis nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam
+          ipsum magnam optio.
+        </p>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          aut dolor ut libero distinctio similique consequuntur molestiae atque,
+          facilis nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam
+          ipsum magnam optio.
+        </p>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          aut dolor ut libero distinctio similique consequuntur molestiae atque,
+          facilis nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam
+          ipsum magnam optio.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          aut dolor ut libero distinctio similique consequuntur molestiae atque,
+          facilis nobis obcaecati non ea. Tenetur reiciendis corrupti quisquam
+          ipsum magnam optio.
+        </p>
+        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07"
+        /></a>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+   
+    <footer>
+      <p>
+        Made by Onyeka Okwuchi - <a href="tweets.html" target="_blank">here</a>
+      </p>
+    </footer>
   </body>
 </html>
