--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,20 +6,37 @@
     <title>Title</title>
   </head>
   <body>
-    <blockquote class="twitter-tweet">
-      <p lang="en" dir="ltr">As a Developer, are you a fun person?</p>
-      &mdash; • nanou • (@NanouuSymeon)
-      <a
-        href="https://twitter.com/NanouuSymeon/status/1867255709429092596?ref_src=twsrc%5Etfw"
-        >December 12, 2024</a
-      >
-    </blockquote>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
+    <main>
+      <article>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">As a Developer, are you a fun person?</p>
+          &mdash; • nanou • (@NanouuSymeon)
+          <a
+            href="https://twitter.com/NanouuSymeon/status/1867255709429092596?ref_src=twsrc%5Etfw"
+            >December 12, 2024</a
+          >
+        </blockquote>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <footer>
+      <p>
+        Made by Onyeka Okwuchi - <a href="tweets.html" target="_blank">here</a>
+      </p>
+    </footer>
     <script
       async
       src="https://platform.twitter.com/widgets.js"
       charset="utf-8"
     ></script>
-
-    <a href="index.html">Home</a>
   </body>
 </html>
